# Digital_Product

./: .gitignore  Makefile  env.sample  pyproject.toml  requirements.txt
apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_alter_gateway_avatar.py  0003_remove_payment_price.py  0004_alter_gateway_description.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_file_product.py  0003_file_file_type.py  0004_alter_category_avatar.py  0005_alter_product_avatar.py  0006_alter_product_avatar.py  0007_product_user.py  0008_alter_category_avatar.py  0009_product_test_field.py  0010_remove_product_test_field.py
apps/subscriptions/: admin.py  models.py
apps/subscriptions/migrations/: 0002_alter_package_avatar.py  0003_alter_package_avatar.py
apps/users/: admin.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0003_alter_device_device_uuid.py  0004_alter_user_phone_number.py  0005_alter_user_phone_number.py  0006_alter_user_phone_number.py  0007_alter_userprofile_avatar.py  0010_userprofile_bio.py  (+9 more)
digital_product/: settings.py  urls.py
payments/: models.py  serializers.py  views.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
subscriptions/: models.py  serializers.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_device_device_uuid.py
utils/: validators.py
