[tool.poetry]
name = "django-projects"
version = "0.1.0"
description = ""
authors = ["Seyed Reza Ahmadi <ahmadi_sr@yaftyar.ir>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
pillow = "^10.0.1"
psycopg2 = "^2.9.8"
psycopg2-binary = "^2.9.8"
requests = "^2.31.0"
django-import-export = "^3.3.1"
python-decouple = "^3.8"
django-thumbnails = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
